# Aufgabe3

./: README.md
Aufgabe1/Aufgabe1/: CMakeLists.txt  is_odd.c  powerof2.c
Aufgabe2/: CMakeLists.txt  calculator.c  is_prime.c  is_prime.h  operations  operations.c  operations.h  prime  pyramid2  pyramid2.c
Aufgabe3/: CMakeLists.txt  a_test.c  average.c  frequency  frequency.c  mitschrift.c  my_string.c  pointer.c  revers_string.c  sort_test  sort_test.c  upper.c  xmas_sort.c  xmas_sort_test  xmas_sort_test.c
Aufgabe4/: CMakeLists.txt  calculator.c  integers  integers.c  operations.c  operations.h  output_test.c  person_1.c  persons.c  read_test.c
Aufgabe5/: average_Aufgabe3.c  quick.c  quick.i  test_run.c
Aufgabe6/: CMakeLists.txt  attendance  attendance.c  attendance_test  attendance_test.c  products  products.c  snow  snow.c  time_test.c
Aufgabe6/snow_data/: Ischgl_5.txt
Aufgabe_1/: pyramid.c  sum_loop.c
Klausur/: test_page_1.c
Klausurvorbereitung/: CMakeLists.txt  main.c  read_file.c  sort.c  spielwiese.c
