cmake_minimum_required(VERSION 3.16)
project(Aufgabe6 C)

set(CMAKE_C_STANDARD 99)

add_executable(Aufgabe6_attendance attendance.c)
add_executable(Aufgabe6_time_test time_test.c)
add_executable(Aufgabe6_products products.c)
add_executable(Aufgabe6_snow snow.c)
add_executable(Aufgabe6_attendance_test attendance_test.c)
